--- a/cmd/backend/static/index.html
+++ b/cmd/backend/static/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meeting Recorder and Concluder</title>
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, post-check=0, pre-check=0" />
   <script src="/tailwind-3.3.0.min.js"></script>
   <script src="/main.js"></script>
 </head>
