Update the title

--- a/cmd/backend/static/index.html
+++ b/cmd/backend/static/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meeting Recorder and Concluder</title>
+  <title>Meeting Concluder</title>
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, post-check=0, pre-check=0" />
   <script src="/tailwind-3.3.0.min.js"></script>
   <script src="/main.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen font-sans">
   <div class="container mx-auto p-8">
-    <h1 class="text-3xl mb-8">Meeting Recorder and Concluder</h1>
+    <h1 class="text-3xl mb-8">Meeting Concluder</h1>
     <div>
       <label for="devices">Select an audio device:</label>
       <select id="devices" class="border rounded p-2"></select>
